[gd_scene load_steps=7 format=3 uid="uid://cexwbxgfkjkdv"]

[ext_resource type="Script" path="res://Scripts/Main Menu/menu.gd" id="1_yb7u0"]
[ext_resource type="FontFile" uid="uid://1sivoi5pj24a" path="res://Fonts/FFFFORWA.TTF" id="2_u0j82"]
[ext_resource type="Theme" uid="uid://be8pcaengcs42" path="res://UI Themes/menu.tres" id="3_4sox8"]
[ext_resource type="AudioStream" uid="uid://dja60stxi1usp" path="res://Music/pixel_sprinter_loop.ogg" id="4_em64b"]

[sub_resource type="LabelSettings" id="LabelSettings_ij66q"]
font = ExtResource("2_u0j82")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_vge2g"]
font = ExtResource("2_u0j82")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yb7u0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -110.25
offset_right = 120.0
offset_bottom = -45.25
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/Main Menu/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sustainability Slide"
label_settings = SubResource("LabelSettings_ij66q")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Main Menu/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Coins Label" type="Label" parent="CanvasLayer/Main Menu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Coins: 15   "
label_settings = SubResource("LabelSettings_vge2g")
horizontal_alignment = 1

[node name="Playable Label" type="Label" parent="CanvasLayer/Main Menu/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You can play!"
label_settings = SubResource("LabelSettings_vge2g")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="CanvasLayer/Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4sox8")
text = "Start game"

[node name="TutorialButton" type="Button" parent="CanvasLayer/Main Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_4sox8")
text = "Play Tutorial"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_em64b")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/Main Menu/VBoxContainer/StartButton" to="." method="_on_button_pressed"]
